Fix mis-alignment of underline effect on active and hovered link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ img {
 .active_link::after {
     content: '';
     position: absolute;
-    bottom: -0.7rem;
+    bottom: -0.5rem;
     left: 0;
     width: 100%;
     height: 3px;
